--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
   width: 80%;
   max-width: 1920px;
   margin: 0 auto;
+  border: 1px solid black;
 }
 
 header {
@@ -15,7 +16,7 @@ header {
 header .gnb {
   display: grid;
   width: 100%;
-  grid-template-columns: 200px 1fr 200px;
+  grid-template-columns: 300px 1fr 300px;
   grid-template-rows: auto auto;
   grid-template-areas:
     'logo gnb-menu menu'
@@ -77,8 +78,63 @@ header .gnb .menu {
   grid-area: menu;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
+  font-weight: bold;
+  width: 80%;
+  margin-left: 20%;
+}
+
+header .gnb .menu .menu-hover {
+  padding: 10px 10px;
+  border-radius: 30px;
+}
+header .gnb .menu .menu-hover:hover {
+  background-color: rgba(172, 172, 172, 0.3);
+}
+header .gnb .menu .profile {
+  background-color: white;
+  color: gray;
+  padding: 10px;
+  border-radius: 30px;
+  font-weight: bold;
 }
 header .gnb .search {
   grid-area: search;
+  width: 70%;
+  margin: 0 auto;
+}
+header .gnb .search .searchUl {
+  background-color: white;
+  color: black;
+  display: flex;
+  border-radius: 50px;
+}
+header .gnb .search .searchUl li {
+  width: 25%;
+  text-align: left;
+  padding: 20px 50px 20px 20px;
+  font-weight: bold;
+  border-radius: 50px;
+  position: relative;
+}
+header .gnb .search .searchUl li::after {
+  position: absolute;
+  content: '';
+  width: 1px;
+  height: calc(100% - calc(20px * 2));
+  right: 0;
+  top: 50%;
+  background-color: lightgrey;
+  transform: translate(0, -50%);
+}
+header .gnb .search .searchUl li:last-of-type::after {
+  display: none;
+}
+header .gnb .search .searchUl li:hover {
+  background-color: lightgray;
+}
+header .gnb .search .searchUl li span {
+  color: gray;
+  font-size: 12px;
+  font-weight: normal;
 }
