--- a/main.css
+++ b/main.css
@@ -5,13 +5,21 @@
   margin: 0 auto;
 }
 
+.black-bg {
+  background-color: black;
+  width: 100%;
+  height: 1000px;
+  left: 0;
+  position: absolute;
+  z-index: 1;
+}
 /* header */
 header {
-  background-color: black;
   text-align: center;
   padding-top: 20px;
   position: relative;
   color: white;
+  z-index: 10;
 }
 header .gnb {
   display: grid;
@@ -150,6 +158,7 @@ header .gnb .search .searchUl li span {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  z-index: 10;
 }
 .notice p {
   font-size: 1.5rem;
@@ -181,6 +190,8 @@ header .gnb .search .searchUl li span {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  position: relative;
+  z-index: 10;
 }
 .mainBanner .content {
   color: white;
