--- a/main.css
+++ b/main.css
@@ -216,3 +216,38 @@ header .gnb .search .searchUl li span {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+/* idea */
+.city {
+  display: flex;
+  width: 100%;
+}
+.city .card {
+  width: 25%;
+  margin-right: 30px;
+  cursor: pointer;
+}
+.city .card:nth-last-of-type(1) {
+  margin-right: 0;
+}
+.city .card img {
+  width: 100%;
+  height: 150px;
+  display: block;
+  /* 이미지에 생기는 공간을 위해서 이걸 지정하면 여백 없어짐 */
+  border-radius: 15px 15px 0px 0px;
+}
+.city .card figcaption {
+  border-radius: 0px 0px 15px 15px;
+  height: calc(150px - calc(24px * 2));
+  padding: 24px 16px;
+  color: white;
+}
+.city .card figcaption p {
+  font-size: 2rem;
+  line-height: 3rem;
+  font-weight: bold;
+}
+.city .card figcaption span {
+  font-size: 1rem;
+}
