--- a/main.css
+++ b/main.css
@@ -6,6 +6,15 @@
   overflow: hidden;
 }
 
+@media screen and (max-width: 767px) {
+  .wrap {
+    width: 90%;
+    max-width: 1920px;
+    margin: 0 auto;
+    overflow: hidden;
+  }
+}
+
 .black-bg {
   background-color: black;
   width: 100%;
@@ -222,9 +231,13 @@ header .gnb .search .searchUl li span {
 .city {
   display: flex;
   width: 100%;
+  overflow-x: scroll;
+  overflow: auto;
+  /* auto로 해주면 자동적으로 맞춰 줌 */
 }
 .city .card {
   width: 25%;
+  min-width: 250px;
   margin-right: 30px;
   cursor: pointer;
 }
@@ -251,6 +264,29 @@ header .gnb .search .searchUl li span {
 }
 .city .card figcaption span {
   font-size: 1rem;
+}
+
+@media screen and (max-width: 767px) {
+  .city {
+    -ms-overflow-style: none; /* ie */
+    scrollbar-width: none; /* firefox */
+  }
+  /* chrome */
+  .city::-webkit-scrollbar {
+    display: none;
+  }
+  .city .card {
+    margin-right: 15px;
+  }
+  .city .card:nth-last-of-type(1) {
+    margin-right: 0;
+  }
+
+  .city .card figcaption p {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    padding-bottom: 0.5rem;
+  }
 }
 
 /* expression */
